--- a/styles/Porta.module.css
+++ b/styles/Porta.module.css
@@ -1,13 +1,62 @@
-.porta {
+.area {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: var(--area-porta-largura);
+  height: var(--area-porta-altura);
+  margin: 5px;
+}
+
+.estrutura {
+  display: flex;
+  flex-grow: 1;
+  border-top: 5px solid brown;
+  border-left: 5px solid brown;
+  border-right: 5px solid brown;
+  width: 90%;
+}
+
+.porta {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  align-items: center;
   padding: 15px;
-  width: 200px;
-  height: 310px;
   background-color: chocolate;
 }
 
 .numero {
   font-size: 3rem;
+}
+
+.macaneta {
+  position: absolute;
+  display: flex;
+  align-self: flex-start;
+  top: calc(0.45 * var(--area-porta-altura));
+  height: 20px;
+  width: 20px;
+  border-radius: 10px;
+  background-color: brown;
+}
+
+.chao {
+  height: 10px;
+  width: 100%;
+  background-color: #ddd;
+}
+
+.selecionada {
+  border-top: 5px solid yellow;
+  border-left: 5px solid yellow;
+  border-right: 5px solid yellow;
+}
+
+.selecionada .numero {
+  color: yellow;
+}
+
+.selecionada .macaneta {
+  background-color: yellow;
 }
